# backend-fastapi-template

./: CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
app/api/: deps.py
app/api/v1/: user.py
app/core/: config.py  logger.py
app/schemas/: user.py
tests/: conftest.py
